# human-resource-machine

./: .coverage  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
rust/: Cargo.toml
rust/src/: interpreter.rs  lexer.rs  main.rs  parser.rs
src/xyz/human_resource_machine/: __main__.py  dot_generator.py  dot_generator_test.py  interpreter.py  interpreter_test.py  lexer.py  lexer_test.py  parser.py  parser_test.py
src/xyz/human_resource_machine/challenges/: level_19.py  level_29.yaml  level_38.py  level_38_size.py  level_38_size.yaml  level_38_speed.yaml  level_38a.py
